force-app/main/default/objects/DM_Investment_Order__c/DM_Investment_Order__c.object-meta.xml
<CustomObject>
    <label>DM Investment Order</label>
    <nameField>
        <label>Investment Order	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Investment Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>