force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investment Orders</relationshipLabel>
    <relationshipName>Investment_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>