force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>DM_Accrued_Interest__c</fullName>
    <label>DM Accrued Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>