force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Amortization_Schedule_Generation_time__c.field-meta.xml
<CustomField>
    <fullName>DM_Amortization_Schedule_Generation_time__c</fullName>
    <label>DM Amortization Schedule Generation time</label>
    <type>DateTime</type>
</CustomField>