force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Archive__c.field-meta.xml
<CustomField>
    <fullName>DM_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Archive</label>
    <type>Checkbox</type>
</CustomField>