force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Buyer__c.field-meta.xml
<CustomField>
    <fullName>DM_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DM Investment Orders (DM Buyer)</relationshipLabel>
    <relationshipName>DM_Investment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>