force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Buying_Price__c.field-meta.xml
<CustomField>
    <fullName>DM_Buying_Price__c</fullName>
    <label>DM Buying Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>