force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Certificate_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Certificate_Rate__c</fullName>
    <label>DM Certificate Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>