force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Charged_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Charged_Off_Date__c</fullName>
    <label>DM Charged Off Date</label>
    <type>Date</type>
</CustomField>