force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Charged_Off_Fees__c.field-meta.xml
<CustomField>
    <fullName>DM_Charged_Off_Fees__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>DM Charged Off Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>