force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Collect_Service_Fees_On__c.field-meta.xml
<CustomField>
    <fullName>DM_Collect_Service_Fees_On__c</fullName>
    <label>DM Collect Service Fees On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Principal Remaining</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>No Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>