force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Created_Loan_Delinquent_Days__c.field-meta.xml
<CustomField>
    <fullName>DM_Created_Loan_Delinquent_Days__c</fullName>
    <label>DM Created Loan Delinquent Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>