force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Created_Loan_Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>DM_Created_Loan_Principal_Remaining__c</fullName>
    <label>DM Created Loan Principal Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>