force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Created_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Created_Loan_Status__c</fullName>
    <label>DM Created Loan Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>