force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Custom_Field_1__c.field-meta.xml
<CustomField>
    <fullName>DM_Custom_Field_1__c</fullName>
    <label>DM Custom Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>