force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>DM_Discount_Percent__c</fullName>
    <label>DM Discount Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>