force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DM_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Enabled</label>
    <type>Checkbox</type>
</CustomField>