force-app/main/default/objects/DM_Investment_Order__c/fields/DM_External_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>DM External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>