force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Generate_Amortization_Schedule__c.field-meta.xml
<CustomField>
    <fullName>DM_Generate_Amortization_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Generate Amortization Schedule</label>
    <type>Checkbox</type>
</CustomField>