force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Interest_Rate_On_Due_IOA__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate_On_Due_IOA__c</fullName>
    <label>DM Interest Rate On Due IOA</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>