force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Interest_Rate_On_Loan__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rate_On_Loan__c</fullName>
    <label>DM Interest Rate On Loan</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>