force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Interest_Rounding_Error__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Rounding_Error__c</fullName>
    <label>DM Interest Rounding Error</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>