force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Interest_Service_Rate__c.field-meta.xml
<CustomField>
    <fullName>DM_Interest_Service_Rate__c</fullName>
    <label>DM Interest Service Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>