force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Investment_Amount__c</fullName>
    <label>DM Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>