force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Investor_Amortization_Schedule_Genera__c.field-meta.xml
<CustomField>
    <fullName>DM_Investor_Amortization_Schedule_Genera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor Amortization Schedule Genera</label>
    <type>Checkbox</type>
</CustomField>