force-app/main/default/objects/DM_Investment_Order__c/fields/DM_IOA_Accrued__c.field-meta.xml
<CustomField>
    <fullName>DM_IOA_Accrued__c</fullName>
    <label>DM IOA Accrued</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>