force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Last_Interest_Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Last_Interest_Accrual_Date__c</fullName>
    <label>DM Last Interest Accrual Date</label>
    <type>Date</type>
</CustomField>