force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Loan__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Loan</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>Investment Orders</relationshipLabel>
    <relationshipName>DM_Investment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>