force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Minimum_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>DM_Minimum_Service_Fee__c</fullName>
    <label>DM Minimum Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>