force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Principal_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>DM_Principal_Amount_Paid__c</fullName>
    <label>DM Principal Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>