force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Reinvest_Principal__c.field-meta.xml
<CustomField>
    <fullName>DM_Reinvest_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Reinvest Principal</label>
    <type>Checkbox</type>
</CustomField>