force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Service_Charge_On_Full_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Service_Charge_On_Full_Payment_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Service Charge On Full Payment Amount</label>
    <type>Checkbox</type>
</CustomField>