force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Share__c.field-meta.xml
<CustomField>
    <fullName>DM_Share__c</fullName>
    <label>DM Share</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>