force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Start_Date__c</fullName>
    <label>DM Start Date</label>
    <type>Date</type>
</CustomField>