force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Summary_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>DM_Summary_Record_Id__c</fullName>
    <label>DM Summary Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>