force-app/main/default/objects/DM_Investment_Order__c/fields/DM_Write_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Write_Off_Amount__c</fullName>
    <label>DM Write Off Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>